--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
 		"seed": "node --require esbuild-register prisma/seed.ts"
 	},
 	"scripts": {
-		"build": "remix build",
-		"dev": "remix dev",
+		"build": "run-s \"build:*\"",
+		"build:css": "npm run generate:css -- --minify",
+		"build:remix": "remix build",
+		"dev": "run-p \"dev:*\"",
+		"dev:css": "npm run generate:css -- --watch",
+		"dev:remix": "remix dev",
+		"generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css",
 		"start": "remix-serve build",
 		"typecheck": "tsc"
 	},
@@ -26,7 +31,9 @@
 		"@types/react-dom": "^18.0.8",
 		"esbuild-register": "^3.4.2",
 		"eslint": "^8.27.0",
+		"npm-run-all": "^4.1.5",
 		"prisma": "^4.9.0",
+		"tailwindcss": "^3.2.4",
 		"typescript": "^4.8.4"
 	},
 	"engines": {
