--- a/package.json
+++ b/package.json
@@ -6,32 +6,62 @@
 	},
 	"scripts": {
 		"build": "run-s \"build:*\"",
-		"build:css": "npm run generate:css -- --minify",
+		"build:css": "postcss styles --base styles --dir app/styles --env production",
 		"build:remix": "remix build",
-		"dev": "run-p \"dev:*\"",
-		"dev:css": "npm run generate:css -- --watch",
+		"dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+		"dev:css": "postcss styles --base styles --dir app/styles -w",
 		"dev:remix": "remix dev",
 		"generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css",
 		"start": "remix-serve build",
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@graphql-codegen/cli": "^2.16.4",
+		"@graphql-codegen/client-preset": "^1.2.6",
+		"@graphql-codegen/gql-tag-operations-preset": "^1.7.4",
+		"@graphql-codegen/typed-document-node": "^2.3.12",
+		"@graphql-codegen/typescript": "^2.8.7",
+		"@graphql-codegen/typescript-operations": "^2.5.12",
+		"@graphql-codegen/typescript-resolvers": "^2.7.12",
+		"@graphql-typed-document-node/core": "^3.1.1",
+		"@headlessui/react": "^1.7.7",
+		"@heroicons/react": "^2.0.14",
 		"@prisma/client": "^4.9.0",
 		"@remix-run/node": "^1.11.1",
 		"@remix-run/react": "^1.11.1",
 		"@remix-run/serve": "^1.11.1",
+		"@shopify/storefront-kit-react": "^2023.1.3",
+		"@types/node": "^18.11.18",
+		"clsx": "^1.2.1",
+		"cookie": "^0.5.0",
+		"cross-fetch": "^3.1.5",
+		"daisyui": "^2.49.0",
+		"framer-motion": "^8.5.3",
+		"graphql": "^16.6.0",
+		"graphql-config": "^4.4.0",
+		"graphql-request": "^5.1.0",
 		"isbot": "^3.6.5",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-use": "^17.4.0",
+		"typographic-base": "^1.0.4"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^1.11.1",
 		"@remix-run/eslint-config": "^1.11.1",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/react": "^18.0.25",
 		"@types/react-dom": "^18.0.8",
+		"autoprefixer": "^10.4.13",
+		"concurrently": "^7.6.0",
 		"esbuild-register": "^3.4.2",
 		"eslint": "^8.27.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.21",
+		"postcss-cli": "^10.1.0",
+		"prettier": "^2.8.3",
+		"prettier-plugin-tailwindcss": "^0.2.2",
 		"prisma": "^4.9.0",
 		"tailwindcss": "^3.2.4",
 		"typescript": "^4.8.4"
